[build-system]
requires = ["setuptools >= 42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sit-test-cases"
version = "0.1"
description = "Samba integration tests"
readme = "README.md"
authors = [
    {name = "Sachin Prabhu", email = "sprabhu@redhat.com"},
    {name = "Anoop C S", email = "anoopcs@samba.org"},
    {name = "Shachar Sharon", email = "ssharon@ibm.com"},
]

[tool.setuptools]
py-modules = [ "testcases", "testhelper" ]

[tool.setuptools_scm]

[tool.black]
line-length = 79
quiet = true
force-exclude = '''
(
  ^/testcases/smbtorture/selftest/
)
'''

[tool.mypy]
disallow_incomplete_defs = true
exclude = [
    "^testcases/smbtorture/selftest",
]

[tool.pytest.ini_options]
markers = [
    "privileged: marks tests as requiring to be run as privileged processes.",
]
